export enum VesselVisitExecutionStatus {
    Waiting = "Waiting",
    Loading = "Loading",
    Unloading = "Unloading",
    InProgress = "InProgress",
    Completed = "Completed",
}